native/video_ffi/twrp_video_player.h

typedef struct TwrpVideoPlayer TwrpVideoPlayer;
/* Native implementation API. */
TwrpVideoPlayer* tvp_create(const char* path);
void tvp_destroy(TwrpVideoPlayer* player);
int tvp_play(TwrpVideoPlayer* player);
int tvp_pause(TwrpVideoPlayer* player);
int tvp_seek(TwrpVideoPlayer* player, int64_t position_ms);