lib/generated/aurora_ffi_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

class AuroraFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AuroraFfiBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AuroraFfiBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  int tw_settings_init() {
    return _tw_settings_init();
  }

  late final _tw_settings_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('tw_settings_init');
  late final _tw_settings_init =
      _tw_settings_initPtr.asFunction<int Function()>();

  int tw_settings_get(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> out_value,
    int out_len,
  ) {
    return _tw_settings_get(
      key,
      out_value,
      out_len,
    );
  }

  late final _tw_settings_getPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Size)>>('tw_settings_get');
  late final _tw_settings_get = _tw_settings_getPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, int)>();

  int tw_settings_get_all(
    ffi.Pointer<ffi.Char> out_value,
    int out_len,
  ) {
    return _tw_settings_get_all(
      out_value,
      out_len,
    );
  }

  late final _tw_settings_get_allPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Size)>>(
      'tw_settings_get_all');
  late final _tw_settings_get_all = _tw_settings_get_allPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  int tw_settings_set(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _tw_settings_set(
      key,
      value,
    );
  }

  late final _tw_settings_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('tw_settings_set');
  late final _tw_settings_set = _tw_settings_setPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int tw_settings_flush() {
    return _tw_settings_flush();
  }

  late final _tw_settings_flushPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('tw_settings_flush');
  late final _tw_settings_flush =
      _tw_settings_flushPtr.asFunction<int Function()>();

  int tw_settings_reset_defaults() {
    return _tw_settings_reset_defaults();
  }

  late final _tw_settings_reset_defaultsPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'tw_settings_reset_defaults');
  late final _tw_settings_reset_defaults =
      _tw_settings_reset_defaultsPtr.asFunction<int Function()>();

  int tw_settings_subscribe(
    tw_settings_event_cb callback,
    ffi.Pointer<ffi.Void> user_data,
  ) {
    return _tw_settings_subscribe(
      callback,
      user_data,
    );
  }

  late final _tw_settings_subscribePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(tw_settings_event_cb,
              ffi.Pointer<ffi.Void>)>>('tw_settings_subscribe');
  late final _tw_settings_subscribe = _tw_settings_subscribePtr
      .asFunction<int Function(tw_settings_event_cb, ffi.Pointer<ffi.Void>)>();

  int tw_power_get_battery_info(
    ffi.Pointer<tw_battery_info_t> out_info,
  ) {
    return _tw_power_get_battery_info(
      out_info,
    );
  }

  late final _tw_power_get_battery_infoPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<tw_battery_info_t>)>>(
      'tw_power_get_battery_info');
  late final _tw_power_get_battery_info = _tw_power_get_battery_infoPtr
      .asFunction<int Function(ffi.Pointer<tw_battery_info_t>)>();

  int tw_power_get_battery_string(
    ffi.Pointer<ffi.Char> out_value,
    int out_len,
  ) {
    return _tw_power_get_battery_string(
      out_value,
      out_len,
    );
  }

  late final _tw_power_get_battery_stringPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Size)>>(
      'tw_power_get_battery_string');
  late final _tw_power_get_battery_string = _tw_power_get_battery_stringPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  int tw_display_set_brightness_percent(
    int percent,
  ) {
    return _tw_display_set_brightness_percent(
      percent,
    );
  }

  late final _tw_display_set_brightness_percentPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int32)>>(
          'tw_display_set_brightness_percent');
  late final _tw_display_set_brightness_percent =
      _tw_display_set_brightness_percentPtr.asFunction<int Function(int)>();

  int tw_display_get_brightness_percent(
    ffi.Pointer<ffi.Int32> out_percent,
  ) {
    return _tw_display_get_brightness_percent(
      out_percent,
    );
  }

  late final _tw_display_get_brightness_percentPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Int32>)>>(
          'tw_display_get_brightness_percent');
  late final _tw_display_get_brightness_percent =
      _tw_display_get_brightness_percentPtr
          .asFunction<int Function(ffi.Pointer<ffi.Int32>)>();

  int tw_display_percent_to_brightness_value(
    int percent,
    ffi.Pointer<ffi.Int32> out_value,
  ) {
    return _tw_display_percent_to_brightness_value(
      percent,
      out_value,
    );
  }

  late final _tw_display_percent_to_brightness_valuePtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Int32, ffi.Pointer<ffi.Int32>)>>(
      'tw_display_percent_to_brightness_value');
  late final _tw_display_percent_to_brightness_value =
      _tw_display_percent_to_brightness_valuePtr
          .asFunction<int Function(int, ffi.Pointer<ffi.Int32>)>();

  int tw_install_init() {
    return _tw_install_init();
  }

  late final _tw_install_initPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('tw_install_init');
  late final _tw_install_init =
      _tw_install_initPtr.asFunction<int Function()>();

  int tw_install_set_paths(
    ffi.Pointer<ffi.Char> log_path,
    ffi.Pointer<ffi.Char> install_file_path,
    ffi.Pointer<ffi.Char> update_binary_path,
  ) {
    return _tw_install_set_paths(
      log_path,
      install_file_path,
      update_binary_path,
    );
  }

  late final _tw_install_set_pathsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('tw_install_set_paths');
  late final _tw_install_set_paths = _tw_install_set_pathsPtr.asFunction<
      int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  int tw_install_start_zip(
    ffi.Pointer<ffi.Char> path,
    int check_digest,
  ) {
    return _tw_install_start_zip(
      path,
      check_digest,
    );
  }

  late final _tw_install_start_zipPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>>(
      'tw_install_start_zip');
  late final _tw_install_start_zip = _tw_install_start_zipPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  int tw_install_get_state() {
    return _tw_install_get_state();
  }

  late final _tw_install_get_statePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('tw_install_get_state');
  late final _tw_install_get_state =
      _tw_install_get_statePtr.asFunction<int Function()>();

  int tw_install_get_progress() {
    return _tw_install_get_progress();
  }

  late final _tw_install_get_progressPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'tw_install_get_progress');
  late final _tw_install_get_progress =
      _tw_install_get_progressPtr.asFunction<int Function()>();

  int tw_install_get_wipe_cache() {
    return _tw_install_get_wipe_cache();
  }

  late final _tw_install_get_wipe_cachePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'tw_install_get_wipe_cache');
  late final _tw_install_get_wipe_cache =
      _tw_install_get_wipe_cachePtr.asFunction<int Function()>();

  int tw_install_read_log(
    int offset,
    ffi.Pointer<ffi.Char> out_value,
    int out_len,
    ffi.Pointer<ffi.Uint64> out_next_offset,
  ) {
    return _tw_install_read_log(
      offset,
      out_value,
      out_len,
      out_next_offset,
    );
  }

  late final _tw_install_read_logPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Uint64, ffi.Pointer<ffi.Char>, ffi.Size,
              ffi.Pointer<ffi.Uint64>)>>('tw_install_read_log');
  late final _tw_install_read_log = _tw_install_read_logPtr.asFunction<
      int Function(int, ffi.Pointer<ffi.Char>, int, ffi.Pointer<ffi.Uint64>)>();

  int tw_install_get_last_error(
    ffi.Pointer<ffi.Char> out_value,
    int out_len,
  ) {
    return _tw_install_get_last_error(
      out_value,
      out_len,
    );
  }

  late final _tw_install_get_last_errorPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Size)>>(
      'tw_install_get_last_error');
  late final _tw_install_get_last_error = _tw_install_get_last_errorPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  int tw_install_get_last_result() {
    return _tw_install_get_last_result();
  }

  late final _tw_install_get_last_resultPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'tw_install_get_last_result');
  late final _tw_install_get_last_result =
      _tw_install_get_last_resultPtr.asFunction<int Function()>();

  int tw_install_reset_session() {
    return _tw_install_reset_session();
  }

  late final _tw_install_reset_sessionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'tw_install_reset_session');
  late final _tw_install_reset_session =
      _tw_install_reset_sessionPtr.asFunction<int Function()>();

  ffi.Pointer<TwrpVideoPlayer> tvp_create(
    ffi.Pointer<ffi.Char> path,
  ) {
    return _tvp_create(
      path,
    );
  }

  late final _tvp_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<TwrpVideoPlayer> Function(
              ffi.Pointer<ffi.Char>)>>('tvp_create');
  late final _tvp_create = _tvp_createPtr.asFunction<
      ffi.Pointer<TwrpVideoPlayer> Function(ffi.Pointer<ffi.Char>)>();

  void tvp_destroy(
    ffi.Pointer<TwrpVideoPlayer> player,
  ) {
    return _tvp_destroy(
      player,
    );
  }

  late final _tvp_destroyPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<TwrpVideoPlayer>)>>(
      'tvp_destroy');
  late final _tvp_destroy =
      _tvp_destroyPtr.asFunction<void Function(ffi.Pointer<TwrpVideoPlayer>)>();

  int tvp_play(
    ffi.Pointer<TwrpVideoPlayer> player,
  ) {
    return _tvp_play(
      player,
    );
  }

  late final _tvp_playPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<TwrpVideoPlayer>)>>(
      'tvp_play');
  late final _tvp_play =
      _tvp_playPtr.asFunction<int Function(ffi.Pointer<TwrpVideoPlayer>)>();

  int tvp_pause(
    ffi.Pointer<TwrpVideoPlayer> player,
  ) {
    return _tvp_pause(
      player,
    );
  }

  late final _tvp_pausePtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<TwrpVideoPlayer>)>>(
      'tvp_pause');
  late final _tvp_pause =
      _tvp_pausePtr.asFunction<int Function(ffi.Pointer<TwrpVideoPlayer>)>();

  int tvp_seek(
    ffi.Pointer<TwrpVideoPlayer> player,
    int position_ms,
  ) {
    return _tvp_seek(
      player,
      position_ms,
    );
  }

  late final _tvp_seekPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<TwrpVideoPlayer>, ffi.Int64)>>('tvp_seek');
  late final _tvp_seek = _tvp_seekPtr
      .asFunction<int Function(ffi.Pointer<TwrpVideoPlayer>, int)>();
